--- a/index.html
+++ b/index.html
@@ -7,15 +7,36 @@
     <title>Countdown</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css"/>
 </head>
 <body>
-    <div class="coming-soon">
+    <section class="coming-soon">
         <div>
             <h2>Days until Jenny's Birthday</h2>
+            <div>
+                <div class="countdown">
+                    <div class="container-day">
+                        <h3 class="day">Time</h3>
+                        <h3>Day</h3>
+                    </div>
+                    <div class="container-hour">
+                        <h3 class="hour">Time</h3>
+                        <h3>Hour</h3>
+                    </div>
+                    <div class="container-minute">
+                        <h3 class="minute">Time</h3>
+                        <h3>Minute</h3>
+                    </div>
+                    <div class="container-second">
+                        <h3 class="second">Time</h3>
+                        <h3>Second</h3>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
+        <img class="cake" src="./birthdaycakescolored.png" alt=""/>
+    </section>
     <script src="app.js"></script>
 </body>
 </html>
